--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 --index-url https://pypi.python.org/simple/
 
 -e .
+
+Pillow==6.2.1
+tweepy==3.6.0
+APScheduler==3.0.3
+selenium==3.141.0
+pytwitcasting==1.0.0
